fix: progress bars contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ ul {
 }
 
 .progress-bar-red {
-    background-color: rgb(200, 41, 41);
+    background-color: rgb(255, 59, 59);
 }
 
 .progress-bar-blue {
